--- a/board.css
+++ b/board.css
@@ -42,3 +42,28 @@
 .chess-board .selected {
 	background: #00ffff;
 }
+
+.menu {
+	font-family: Arial, Helvetica, sans-serif;
+	background-color: #333;
+	overflow: hidden;
+}
+
+.menu a {
+	float: left;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+.menu a:hover {
+	background-color: #ddd;
+	color: black;
+}
+
+.menu a.active {
+	background-color: #04AA6D;
+	color: white;
+}
